--- a/servicio-items-dev.properties
+++ b/servicio-items-dev.properties
@@ -1,3 +1,3 @@
-configuracion.texto=configurando ambiente desarrollo
-configuracion.autor.nombre = Simon
-configuracion.autor.email = simonbedoyavalencia@gmail.com
+configuracion.texto=configurando ambiente desarrollo ...
+configuracion.autor.nombre = Jhon Doe
+configuracion.autor.email = jhon.doe@gmail.com
